# smelt

./: config.site  generate_pyconfig_for_host.sh  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/hatchdemo/: pyproject.toml
examples/hatchdemo/src/hatchdemo/: cli.py  fib_cython.pyx  hello.c  zighello.zig
examples/minimal/: pyproject.toml
examples/minimal/src/minimal/: cli.py  fib_cython.pyx
examples/zigextdemo/: pyproject.toml
examples/zigextdemo/src/: lib.zig
src/smelt/: backend.py  cli.py  compiler.py  config.py  context.py  frontend.py  mypycify.py  nuitkaify.py  process.py  utils.py
src/smelt/build_backends/: hatch.py
tests/: test_compiler.py  test_config.py  test_context.py  test_frontend.py  test_process.py
tests/functional/: conftest.py  noxfile.py  test_correctness.py
tests/modules/: entrypoint.py
