
[project]
name = "smelt"
version = "0.1.0"
description = "Tooling around MStar PLC TX calibration"
requires-python = ">=3.12"
authors = [{ name = "Baptiste Pestourie" }]

dependencies = ["setuptools", "ziglang"]

[project.urls]
Homepage = "https://github.com/Hedwyn/smelt"

[tool.setuptools]
package-dir = { "" = "src" }
