
[project]
name = "smelt"
version = "0.1.0"
description = "Tooling around MStar PLC TX calibration"
requires-python = ">=3.12"
authors = [{ name = "Baptiste Pestourie" }]

dependencies = ["setuptools", "ziglang"]

[project.urls]
Homepage = "https://github.com/Hedwyn/smelt"

[project.optional-dependencies]
tests = ["pytest", "mypy[mypyc]"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
# There's on pyconfig.h per platform + python combination
# Path is pyconfig/platform/python/pyconfig.h
"smelt.pyconfig" = ["*/*/pyconfig.h"]
