[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "smelt"
dynamic = ["version"]
description = "Binary orchestrator for Python packages"
requires-python = ">=3.12"
authors = [{ name = "Baptiste Pestourie" }]
readme = "README.md"
dependencies = ["setuptools", "ziglang"]

[project.scripts]
smelt = "smelt.frontend:smelt"

[project.urls]
Homepage = "https://github.com/Hedwyn/smelt"

[project.optional-dependencies]
tests = ["pytest", "mypy[mypyc]"]
mypyc = ["mypy[mypyc]"]
cli = ["click"]
nuitka = ["nuitka"]
cython = ["Cython"]
build = ["Cython", "nuitka", "mypy[mypyc]", "hatchling", "editables"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]

[tool.setuptools.package-data]
# There's on pyconfig.h per platform + python combination
# Path is pyconfig/platform/python/pyconfig.h
"smelt.pyconfig" = ["*/*/pyconfig.h"]

[project.entry-points.hatch]
smelt = "smelt.build_backends.hatch"
