[project]
name = "smelt-minimal-demo"
version = "0.1.0"
description = "A minimalist package setup using smelt"
requires-python = ">=3.12"
authors = [{ name = "Baptiste Pestourie" }]
dependencies=["click"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.smelt]
mypyc = ["minimal.fib"]
c_extensions=["minimal.hello"]
entrypoint="minimal.cli"
